--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ div#textInputContainer{
 }
 
 div#textInputContainer textarea{
-    padding: 0.2em;
+    padding: 0.5em;
     font-family: sans-serif;
     font-size: inherit;
-    height: 3em;
+    height: 1.5em;
     flex: 1;
     resize: none;
     border-radius: 0.5em;
@@ -102,7 +102,7 @@ div#textInputContainer button{
     display: block;
     width: 2.5rem;
     height: 2.5rem;
-    align-self: center;
+    align-self: flex-end;
     display: flex;
     align-items: center;
     justify-content: center;
