--- a/src/style.css
+++ b/src/style.css
@@ -268,7 +268,7 @@ div#middleInputContainer > div#keywordContainer{
 
 .keyword{
     color: white;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     display: inline-block;
     padding: 0.3em 0.7em;
     width: max(5ch, fit-content);
@@ -277,6 +277,9 @@ div#middleInputContainer > div#keywordContainer{
     border-radius: 0.7em;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     border: none;
+}
+
+div#keywordContainer .keyword{
     cursor: pointer;
 }
 
