--- a/src/style.css
+++ b/src/style.css
@@ -75,16 +75,17 @@ strong{
 div.chatsection{
     margin-bottom: 1em;
     display: flex;
+    align-items: center;
 }
 
 div.chatsection.user{
     justify-content: flex-end;
-    padding-left: 3em;
+    padding-left: 1em;
 }
 
 div.chatsection.ai{
     justify-content: flex-start;
-    padding-right: 3em;
+    padding-right: 1em;
 }
 div.chatsection h3{
     color: #8E8D94;
@@ -95,6 +96,31 @@ div.chatsection h3{
     letter-spacing: 0.827px; 
     margin-left: 2em;
     margin-bottom: 0.3em;
+}
+
+div.chatsection h3 > button{
+    display: none;
+    top: 0.3em;
+    background-color: inherit;
+    border: none;
+    height: 1.2em;
+}
+
+div.chatsection.loaded h3 > button{
+    display: inline;
+}
+
+div.chatsection h3 > button > svg{
+    filter: invert(59%) sepia(7%) saturate(230%) hue-rotate(209deg) brightness(93%) contrast(94%);
+    height: 1.4em;
+}
+
+div.chatsection.user h3 > button:hover svg{
+    filter: invert(10%) sepia(5%) saturate(1214%) hue-rotate(211deg) brightness(97%) contrast(89%);
+}
+
+div.chatsection.ai h3 > button:hover svg{
+    filter: invert(44%) sepia(13%) saturate(5402%) hue-rotate(196deg) brightness(84%) contrast(107%);
 }
 
 div.chatbox{
@@ -162,20 +188,16 @@ div.lower-left{
 }
 
 div.chatbox.user > div.left-box > div,
-div.chatbox.user > div.right-box > div{
-    background-color: #26252A;
-}
-
-div.chatbox.user > div.content{
+div.chatbox.user > div.right-box > div, 
+div.chatbox.user > div.content
+{
     background-color: #26252A;
 }
 
 div.chatbox.ai > div.left-box > div,
-div.chatbox.ai > div.right-box > div{
-    background-color: #2D68DC;
-}
-
-div.chatbox.ai > div.content{
+div.chatbox.ai > div.right-box > div,
+div.chatbox.ai > div.content
+{
     background-color: #2D68DC;
 }
 
@@ -208,7 +230,8 @@ section#inputContainer{
     bottom: 0;
     width: 100%;
     box-sizing: border-box;
-    padding: 1em 2em 2em;
+    background-color: white;
+    padding: 1.2em 1.5em 1.2em;
 }
 
 section#inputContainer button:hover{
@@ -275,7 +298,7 @@ div#middleInputContainer > div#keywordContainer{
     color: white;
     font-size: 0.9rem;
     display: inline-block;
-    padding: 0.3em 0.7em;
+    padding: 0.3em 0.8em;
     width: max(5ch, fit-content);
     margin: 0 0.3em 0.15em 0;
     background: #2D68DC;
