Added TTS feature to question recommendations

--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,7 @@ header{
     padding: 1em 2em;
     box-sizing: border-box;
     background-color: #FBFBFF;
+    color: #26252A;;
 }
 
 header > div.container{
@@ -58,7 +59,7 @@ header button{
 }
 
 button svg path#Info-Square-2{
-    fill: black;
+    fill: #26252A;
 }
 
 button:hover svg path#Info-Square-2{
@@ -428,6 +429,9 @@ div#recommendationPopUp > div{
 }
 
 div.recommendation{
+    display: flex;
+    gap: 0.5em;
+    align-items: stretch;
     cursor: pointer;
     font-size: 1rem;
     color: #FBFBFF;
@@ -448,6 +452,27 @@ div.recommendation:hover{
 div.recommendation.selected{
     background-color: hsl(220, 71%, 30%);
     outline: hsl(220, 71%, 20%) 2px solid;
+}
+
+div.recommendation div.content{
+    flex: 1;
+}
+
+div.recommendation button.recommendation-speak{
+    top: 0.15em;
+    display: block;
+    background-color: inherit;
+    border: none;
+}
+
+div.recommendation button.recommendation-speak svg{
+    filter: invert(100%) sepia(1%) saturate(7404%) hue-rotate(57deg) brightness(87%) contrast(164%);
+    height: 1em;
+    width: auto;
+}
+
+div.recommendation.playing button.recommendation-speak svg{
+    filter: invert(11%) sepia(3%) saturate(2176%) hue-rotate(211deg) brightness(91%) contrast(89%);
 }
 
 div#actionButtons{
