--- a/src/style.css
+++ b/src/style.css
@@ -238,6 +238,14 @@ div.chatbox.user svg{
     right: -1px;
 }
 
+div.chatbox.ai .highlight{
+    background-color: hsl(220, 71%, 20%);
+}
+
+div.chatbox.user .highlight{
+    background-color: hsl(220, 71%, 40%);
+}
+
 
 /* Input Section */
 
