--- a/src/style.css
+++ b/src/style.css
@@ -503,6 +503,10 @@ div.recommendation.playing button.recommendation-speak svg{
     filter: invert(11%) sepia(3%) saturate(2176%) hue-rotate(211deg) brightness(91%) contrast(89%);
 }
 
+div.recommendation .highlight{
+    background-color: hsl(220, 71%, 20%);
+}
+
 div#actionButtons{
     margin-top: 0.8em;
     display: flex;
