--- a/src/style.css
+++ b/src/style.css
@@ -238,6 +238,10 @@ div.chatbox.user svg{
     right: -1px;
 }
 
+span[class |= "word"]{
+    transition: background-color 0.2s linear;
+}
+
 div.chatbox.ai .highlight{
     background-color: hsl(220, 71%, 20%);
 }
@@ -246,6 +250,9 @@ div.chatbox.user .highlight{
     background-color: hsl(220, 71%, 40%);
 }
 
+div.recommendation .highlight{
+    background-color: hsl(220, 71%, 20%);
+}
 
 /* Input Section */
 
@@ -501,10 +508,6 @@ div.recommendation button.recommendation-speak svg{
 
 div.recommendation.playing button.recommendation-speak svg{
     filter: invert(11%) sepia(3%) saturate(2176%) hue-rotate(211deg) brightness(91%) contrast(89%);
-}
-
-div.recommendation .highlight{
-    background-color: hsl(220, 71%, 20%);
 }
 
 div#actionButtons{
