--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
+
 * {
-    font-family: 'Lato';
+    font-family: 'Comic Neue';
     font-weight: 700;
     font-size: 1em;
     margin: 0px;
@@ -75,6 +77,7 @@ strong{
 }
 
 div.chatsection{
+    font-size: 1.2rem;
     margin-bottom: 1em;
     display: flex;
     align-items: center;
@@ -144,14 +147,14 @@ div.chatsection.ai.playing h3{
 
 div.chatbox{
     color: #FBFBFF;
-    font-size: 1rem;
+    font-size: 1.2rem;
     display: flex;
     width: fit-content;
     max-width: 75ch;
 }
 
 div.chatbox > div.content{
-    padding: 1em 0 1em;
+    padding: 0.6em 0 0.6em;
     min-width: 15ch;
     line-height: 1.5;
     flex: 1;
@@ -352,7 +355,7 @@ div#middleInputContainer > div#keywordContainer{
 
 .keyword{
     color: #FBFBFF;
-    font-size: 0.9rem;
+    font-size: 1.0rem;
     display: inline-block;
     padding: 0.3em 0.8em;
     width: max(5ch, fit-content);
@@ -475,6 +478,7 @@ div#recommendationPopUp > div{
 div.recommendation{
     display: flex;
     gap: 0.5em;
+    font-size: 1.2em;
     align-items: stretch;
     cursor: pointer;
     font-size: 1rem;
