--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -70,4 +70,12 @@
         top: 0;
         left: 0;
     }
+
+    div#informationPopUp iframe{
+        width: 76vw;
+        height: 42.75vw;
+        margin: auto;
+        margin-top: 1em;
+        display: block;
+    }
 }
